--- a/src/components/WarpIndicator/SpeedLabel/styles.scss
+++ b/src/components/WarpIndicator/SpeedLabel/styles.scss
@@ -1,6 +1,9 @@
 .speed-label {
     cursor: pointer;
-    margin-bottom: .5rem;
+
+    @media(min-height: 720px) {
+      margin-bottom: .5rem;
+    }
 
     opacity: 0;
     border-radius: 4px;
@@ -12,6 +15,9 @@
     justify-content: center;
 
     font-size: 0.8rem;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
     &.visible {
         opacity: 1;
