--- a/src/components/WarpIndicator/styles.scss
+++ b/src/components/WarpIndicator/styles.scss
@@ -1,22 +1,23 @@
 .warp-indicator {
+  display: flex;
+
+  .panel-container {
+    flex: 1;
+  }
+
+  .container {
+    flex: 1;
+
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-    .panel-container {
-        flex: 1;
+    .speed-label {
+      flex: 1;
     }
+  }
 
-    .container {
-        flex: 1;
-
-        display: flex;
-        flex-direction: column;
-
-        .speed-label {
-            flex: 1;
-        }
-    }
-
-    .panel {
-        border: 0;
-    }
+  .panel {
+    border: 0;
+  }
 }
