--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,2 +1,3 @@
 $black: #000;
 $white: #fff;
+$green: #B9FF62;
